WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32027
REGRESSION (
r49705
): Tests that use TestNetscapePlugin fail in Debug_Internal builds
https://bugs.webkit.org/show_bug.cgi?id=32027
Summary
REGRESSION (r49705): Tests that use TestNetscapePlugin fail in Debug_Internal...
Adam Roben (:aroben)
Reported
2009-12-01 10:28:32 PST
Created
attachment 44087
[details]
Patch Looks like we're not looking in the right location for TestNetscapePlugin in these builds.
Attachments
Patch
(1.18 KB, patch)
2009-12-01 10:28 PST
,
Adam Roben (:aroben)
adachan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2009-12-01 10:30:03 PST
style-queue ran check-webkit-style on
attachment 44087
[details]
without any errors.
Eric Seidel (no email)
Comment 2
2009-12-28 22:40:27 PST
Attachment 44087
[details]
was posted by a committer and has review+, assigning to Adam Roben for commit.
Adam Roben (:aroben)
Comment 3
2010-01-04 07:57:12 PST
Committed
r51546
: <
http://trac.webkit.org/changeset/51546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug