Fix tests that use the TestNetscapePlugin in Debug_Internal builds

Reviewed by Ada Chan.

Fixes <http://webkit.org/b/32027> REGRESSION (r49705): Tests that use
TestNetscapePlugin fail in Debug_Internal builds

* DumpRenderTree/win/DumpRenderTree.cpp: Use the "_Debug" plugin
directory in Debug and Debug_All builds, but not in Debug_Internal
builds.

Canonical link: https://commits.webkit.org/42973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51546 268f45cc-cd09-0410-ab3c-d52691b4dbfc